--- a/index.html
+++ b/index.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <title>The Psychic Game by Rayna McGinnis</title>
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script type='text/javascript' src="script.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="assets/javascript/game2.js"></script>
 
    </head>
 
+   <body>
+
+   <!-- Header for the Psychic Game -->
+
+        <nav class="navbar navbar-dark text-white" style="background-color: #0f7960;"">
+                <a class="navbar-brand">The Psychic Game</a>
+                <form class="form-inline">
+                </form>
+              </nav>
+
+    <!-- Game statistics   -->
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-7">
+
+                        <h1>Can you guess which letter the computer is thinking of?</h1> 
+                        <hr>
+        <p id="directions"> Press any letter on the keyboard to guess:</p>
+        <p id="user-wins">Wins: </p>
+        <p id="user-losses">Losses: </p>
+        <p id="guesses-left">Guesses Left: </p>
+        <p id="guessed-letters">Guesses So Far:</p>
+                    </div>
+                    <div class="col-sm-5">
+                            <img id="psychic" src="assets/images/psychic.jpg" class="img-fluid" alt="psychic" max-width="100%"; height="auto";>
+                    </div>
+                </div>
+             </div>
+        </div>
+    <!-- Footer area -->
+<footer>
+        <nav class="navbar fixed-bottom text-white" style="background-color: #0f7960;">
+                <a class="navbar-brand" href="#"></a>
+                <span class="navbar-text">
+                        © Copyright 2018
+                      </span>
+              </nav>
+</footer>
+
+   </body>
 
 
 </html>
