initial site files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="assets/javascript/game2.js"></script>
 
    </head>
 
@@ -29,16 +28,18 @@
                         <h1>Can you guess which letter the computer is thinking of?</h1> 
                         <hr>
         <p id="directions"> Press any letter on the keyboard to guess:</p>
-        <p id="user-wins">Wins: </p>
-        <p id="user-losses">Losses: </p>
-        <p id="guesses-left">Guesses Left: </p>
-        <p id="guessed-letters">Guesses So Far:</p>
+        <p id="wins">Wins: </p>
+        <p id="losses">Losses: </p>
+        <p id="guessesLeft">Guesses Left: </p>
+        <p id="guessedLetters">Guesses So Far:</p>
                     </div>
                     <div class="col-sm-5">
                             <img id="psychic" src="assets/images/psychic.jpg" class="img-fluid" alt="psychic" max-width="100%"; height="auto";>
                     </div>
                 </div>
-             </div>
+                <script src="assets/javascript/game2.js"></script>
+ 
+            </div>
         </div>
     <!-- Footer area -->
 <footer>
